--- a/Dynamic/franciscomatignon/src/app/header/header.component.html
+++ b/Dynamic/franciscomatignon/src/app/header/header.component.html
@@ -1,7 +1,7 @@
 <header>
-    <a routerLink="work" routerLinkActive="non-clickable">
-      <object data="../../assets/Asset 6.svg"></object>
-    </a>  
+  <div id="logo-container">
+    <object  id="logo-link" routerLink="work" routerLinkActive="non-clickable" data="../../assets/Asset 6.svg"></object>
+  </div>
   <nav>
     <a routerLinkActive="active" routerLink="work">Work</a>
     <a routerLinkActive="active" routerLink="about">About</a>
