--- a/Dynamic/franciscomatignon/src/app/footer/footer.component.css
+++ b/Dynamic/franciscomatignon/src/app/footer/footer.component.css
@@ -2,24 +2,26 @@ footer{
   margin: 0px 12px;
   height: 40px;
   font-size: smaller;
+  display: flex;
+  justify-content: center;
+  align-items: end;
+  z-index: -2;
 }
-#copy {
+.absolute {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 99vh;
+}
+.footer-elements {
   text-align: center;
-  font-size: x-small;
 }
-#btt {
-  text-align: center;
-  margin-bottom: 10px;
+p {
+  margin-bottom: 16px;
 }
-
 /* Tablet*/
 @media (min-width: 768px){
-	footer {
-    margin-right: 16px;
-    margin-left: 16px;
-    font-size: small;
-    height: 50px;
-  }
 }
 /* Desktop */
 @media (min-width: 1200px){
