--- a/Dynamic/franciscomatignon/src/app/work/work.component.css
+++ b/Dynamic/franciscomatignon/src/app/work/work.component.css
@@ -9,7 +9,7 @@
   position: relative;
   z-index: 0;
   width: 100vw;
-  max-height: 760px;
+  max-height: 700px;
 }
 #hero-wrapper img{
   width: 100%;
@@ -34,7 +34,7 @@
 #cta {
   text-align: center;
   margin-top: 32px;
-  margin-bottom: 32px;
+  margin-bottom: 48px;
 }
 #cta p {
   font-size: large;
@@ -45,7 +45,15 @@
   color: white;
   background-color: black;
   padding: 12px 30px;
-  font-family: 'Public sans';
+  border-radius: 4px;
+}
+#cta button:hover {
+  background-color: rgba(0, 0, 0, .85);
+  cursor: pointer;
+}
+
+#cta button:active {
+  background-color: rgba(0, 0, 0, .65);
 }
 
 /* Tablet*/
@@ -64,7 +72,7 @@
 /* Desktop*/
 @media screen and (min-width: 1200px){
   #hero-wrapper {
-    max-height: 810px;
+    max-height: 760px;
   }
   #hero-wrapper img {
     width: 100%;
@@ -73,5 +81,8 @@
     display: grid;
     grid-template-columns: repeat(3,1fr);
     grid-column-gap: 16px;
+  }
+  #cta p {
+    font-size: larger;
   }
 }
