--- a/Dynamic/franciscomatignon/src/app/modal-gallery/modal-gallery.component.html
+++ b/Dynamic/franciscomatignon/src/app/modal-gallery/modal-gallery.component.html
@@ -1,14 +1,12 @@
 <ng-container  *ngIf="show" >
   <div class="modal-container" #modalBackground>
     <div class="modal-content">
-      <p>aaa      </p>
-    <ngb-carousel #carousel>
+    <ngb-carousel class="carousel" #carousel>
       <ng-template ngbSlide>
         <div #slideWrapper class="slide-wrapper">
-          <img [src]="currentProject.cover" alt="" />
+          <img class="slide-image" [src]="currentProject.cover" alt="" />
         </div>
-      </ng-template>
-      <ng-template *ngFor="let image of currentProject.images" ngbSlide>
+      </ng-template><ng-template *ngFor="let image of currentProject.images" ngbSlide>
         <div #slideWrapper2 class="slide-wrapper">
           <img [src]="image" alt="" />
         </div>
