--- a/Dynamic/franciscomatignon/src/app/work/work.component.html
+++ b/Dynamic/franciscomatignon/src/app/work/work.component.html
@@ -37,8 +37,8 @@
   </app-modal-gallery>
 <!-- CTA -->
 <div id="cta">
-  <p>Your vision, our pixels</p>
+  <p>{{ 'slogan' | translate}}</p>
   <button routerLink="/about">
-    CONTACT
+    {{'contact-button' | translate | uppercase }}
   </button>
 </div>
