--- a/Dynamic/franciscomatignon/src/app/about/about.component.html
+++ b/Dynamic/franciscomatignon/src/app/about/about.component.html
@@ -1,14 +1,14 @@
 <div id="about">
   <div id="first-row">
     <div id="about-text">
-      <h2>About our studio</h2>
-      <p>At <span class="bold-font">A</span>, we are a team of young architects and 3D artists helping professionals all across the building industries communicate unbuilt projects. Our images strive to go beyond photorealism and convey <span class="bold-font">meaning</span> and <span class="bold-font">emotion</span> to drive sales, move designs forward or win competitions.</p>
-      <p> Based in <span id="argentina">Argentina </span> and working globally.</p>
+      <h2>{{'about-title' | translate}}</h2>
+      <p>{{'about-copy-long-1' | translate}} <span class="bold-font">{{'about-copy-long-2' | translate}}</span>{{'about-copy-long-3' | translate}}<span class="bold-font">{{'about-copy-long-4' | translate}}</span>{{'about-copy-long-5' | translate}}<span class="bold-font">{{'about-copy-long-6' | translate}}</span>{{'about-copy-long-7' | translate}}</p>
+      <p> {{'about-copy-short-1' | translate}}<span id="argentina">{{'about-copy-short-2' | translate}}</span>{{'about-copy-short-3' | translate}}</p>
     </div>
     <div id="contact">
-      <h2>Contact</h2>
+      <h2>{{'about-contact-title' | translate}}</h2>
       <div class="contact-channel">
-        <p>Work</p>
+        <p>{{'work-contact' | translate}}</p>
         <p>contact@arenderingstudio.com</p>
       </div>
       <div class="contact-channel">
@@ -16,39 +16,39 @@
         <a id="instagram" href="https://www.instagram.com/arenderingstudio">@arenderingstudio</a>
       </div>
       <div class="contact-channel">
-        <p>Founder / Director</p>
+        <p>{{'founder-director' | translate}}</p>
         <a id="linkedIn" href="https://www.linkedin.com/in/fmatignon/">Francisco Matignon <fa-icon [icon]="['fab', 'linkedin']"></fa-icon></a>
       </div>
     </div>
   </div>
   <div id="form-container" *ngIf="!mobile">
     <form action="" method="" #contactForm ="ngForm" (ngSubmit)="contactForm.valid ? sendEmail() : ''">
-      <h3>Contact us</h3>
+      <h3>{{'form-title' | translate}}</h3>
       <fieldset>
-        <legend class="form-legend">Name</legend>
+        <legend class="form-legend">{{'form-name' | translate}}</legend>
         <input  type="text" name="name" id="name" [(ngModel)]="params.name" tabindex="1" required autofocus #nameInput="ngModel">
       </fieldset>
       <fieldset>
-        <legend class="form-legend">Email</legend>
+        <legend class="form-legend">{{'form-email' | translate}}</legend>
         <input  type="email" name="email" id="email" [(ngModel)]="params.email" tabindex="2" required #emailInput="ngModel" email>
       </fieldset>
       <fieldset>
-        <legend class="form-legend">Subject</legend>
+        <legend class="form-legend">{{'form-subject' | translate}}</legend>
         <input  type="text" name="subject" id="subject" [(ngModel)]="params.subject" tabindex="3" required #subjectInput="ngModel">
       </fieldset>
       <fieldset>
-        <legend class="form-legend">Message</legend>
+        <legend class="form-legend">{{'form-message' | translate}}</legend>
         <textarea  tabindex="4" name="message" id="message" [(ngModel)]="params.message" required #messageInput="ngModel"></textarea>
       </fieldset>
       <fieldset>
-        <button name="submit" type="submit" id="contact-submit" data-submit="...Sending">Send</button>
+        <button name="submit" type="submit" id="contact-submit" data-submit="...Sending">{{'form-submit-button' | translate}}</button>
       </fieldset>
       <input type="hidden" name="_after" value="https://www.instagram.com">
       <div style="opacity: 0.6;" *ngIf="contactForm.invalid">
-        Every field is required.
+        {{'form-invalid' | translate}}
       </div>
     </form>
   </div>
-  <h3 id="cta" *ngIf="!desktop" >Your vision, our pixels</h3>
+  <h3 id="cta" *ngIf="!desktop" >{{'slogan' | translate}}</h3>
   <hr *ngIf="mobile || tablet">
 </div>
