--- a/Dynamic/franciscomatignon/src/app/app.component.html
+++ b/Dynamic/franciscomatignon/src/app/app.component.html
@@ -7,6 +7,7 @@
   <title>Document</title>
 </head>
 <body>
+  <app-language-bar></app-language-bar>
   <app-header></app-header>
   <main>
     <router-outlet></router-outlet>
