--- a/Dynamic/franciscomatignon/src/app/header/header.component.html
+++ b/Dynamic/franciscomatignon/src/app/header/header.component.html
@@ -1,6 +1,6 @@
 <header>
   <div id="logo-container">
-    <object  id="logo-link" routerLink="work" data="../../assets/Asset 6.svg"></object>
+    <object  id="logo-link" routerLink="work" data="../../assets/A - logo.svg"></object>
   </div>
   <nav>
     <a routerLinkActive="active" routerLink="work">{{ 'work' | translate}}</a>
